include (Translations)
configure_file (io.elementary.photos.desktop.in.in ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.desktop.in)
configure_file (io.elementary.photos-viewer.desktop.in.in ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos-viewer.desktop.in)
configure_file_translation (${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.desktop ${CMAKE_SOURCE_DIR}/po/)
configure_file_translation (${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos-viewer.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos-viewer.desktop ${CMAKE_SOURCE_DIR}/po/)
configure_file_translation (${CMAKE_CURRENT_SOURCE_DIR}/io.elementary.photos.appdata.xml.in ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.appdata.xml ${CMAKE_SOURCE_DIR}/po/)

install (FILES ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.desktop DESTINATION ${DATADIR}/applications)
install (FILES ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos-viewer.desktop DESTINATION ${DATADIR}/applications)
install (FILES ${CMAKE_CURRENT_BINARY_DIR}/io.elementary.photos.appdata.xml DESTINATION ${DATADIR}/metainfo)
