if (BUILD_PLUGINS)
    message("-- Plugins enabled")

    include_directories (${CMAKE_BINARY_DIR}/src)
    add_subdirectory (pantheon-photos-publishing)
    add_subdirectory (pantheon-photos-publishing-extras)
    add_subdirectory (pantheon-photos-transitions)
else ()
    message ("-- Plugins disabled")
endif ()
